--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
 
     <main>
-        <p>This is a simple HTML page created as an example. Hello hello hello. You can easily modify the content to add more sections, images, links, or anything else you want!</p>
+        <p>This is a simple HTML page created as an example. You can easily modify the content to add more sections, images, links, or anything else you want!</p>
         <p>HTML is a markup language used to structure content on the web.</p>
     </main>
 
