--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@ https://www.tooplate.com/view/2122-nano-folio
 				<h2>About Us</h2>
 			</div>
 			<div class="tm-about-text">
-				<p class="tm-mb-40">Nano Folio is simple HTML template with a minimal very light-weight custom CSS file. Max content width is 940 pixels. You can easily change the width or any part in this template. Gallery comes with a pop-up image and simple categories.</p>
-				<p class="tm-mb-0">Please support Tooplate website by telling your friends about it. That is going to be very helpful for us. Feel free to message us via email or live chat if you have anything to say.</p>
+				<p class="tm-mb-40">Welcome to Thal Daniel Photography, where every moment is captured with precision and creativity. 
+					Specializing in portrait, event, and lifestyle photography, I aim to tell your unique story through stunning imagery, 
+					creating lasting memories you'll cherish forever.</p>
+				<p class="tm-mb-0">Support me via https://youtube.com/channel/ThalDaniel.</p>
 			</div>
 		</section>
 
@@ -112,9 +114,7 @@ https://www.tooplate.com/view/2122-nano-folio
 			</div>
 			<div class="tm-contact-info">
 				<address class="tm-mb-30">
-					120 Curabitur sed tortor ultrices,
-					congue odio eget, posuere urna.
-					Praesent at rhoncus 10680
+					California, USA
 				</address>
 				<div class="tm-text-white tm-mb-40">Tel: <a href="tel:0100200340" class="tm-link-white">010-020-0340</a></div>
 				<div class="tm-flex">
