--- a/index.html
+++ b/index.html
@@ -125,16 +125,16 @@ https://www.tooplate.com/view/2122-nano-folio
 			</div>
 			<div class="tm-contact-form-container">
 				<form id="contact-form" action="" method="POST" class="tm-contact-form">
-		          	<input type="text" name="name" placeholder="name" required="" />
-		          	<input type="email" name="email" placeholder="email" required="" />
-		          	<textarea rows="5" name="message" class="tm-mb-30" placeholder="message" required=""></textarea>		          	
-		          	<button type="submit" class="tm-right tm-btn-submit">send</button>          	
+		          	<input type="text" name="name" placeholder="Name" required="" />
+		          	<input type="email" name="email" placeholder="Email" required="" />
+		          	<textarea rows="5" name="Eessage" class="tm-mb-30" placeholder="message" required=""></textarea>		          	
+		          	<button type="submit" class="tm-right tm-btn-submit">Send</button>          	
 		        </form>    
 			</div>
 		</section>
 
 		<footer class="tm-footer">
-			Copyright 2020 Nano Folio - Design: <a rel="sponsored" href="https://www.tooplate.com" class="tm-link-gray">Tooplate</a>
+			@ThalDanielPhotography</a>
 		</footer>
 	</div>
 
